add get user profile by id endpoint

--- a/documentation/API-Spec/index.yml
+++ b/documentation/API-Spec/index.yml
@@ -166,6 +166,8 @@ paths:
                     type: string
                   username: 
                     type: string
+                  name: 
+                    type: string
                   email: 
                     type: string
                   isFriend:
