add edit profile endpoint and firebase config

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -5,3 +5,10 @@ DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
 JWT_SECRET_KEY=test-jwt
+FIREBASE_apiKey= 
+FIREBASE_authDomain= 
+FIREBASE_projectId= 
+FIREBASE_storageBucket= 
+FIREBASE_messagingSenderId= 
+FIREBASE_appId= 
+FIREBASE_measurementId= 
