--- a/backend/.env-example
+++ b/backend/.env-example
@@ -2,6 +2,7 @@ HOST=localhost
 PORT=
 DB_PORT=
 DB_NAME=
+DB_TEST=
 DB_USERNAME=
 DB_PASSWORD=
 JWT_SECRET_KEY=test-jwt
@@ -12,3 +13,4 @@ FIREBASE_storageBucket=
 FIREBASE_messagingSenderId= 
 FIREBASE_appId= 
 FIREBASE_measurementId= 
+ENVIRONTMENT=test
