--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "dev": "npm-run-all build start",
     "watch:dev": "nodemon ./dist",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "migration:generate": "ts-node ./node_modules/typeorm/cli migration:generate -d ./src/config/orm.config.ts",
     "migration:up": "ts-node ./node_modules/typeorm/cli migration:run -d src/config/orm.config.ts",
     "migration:down": "ts-node ./node_modules/typeorm/cli migration:revert -d src/config/orm.config.ts",
@@ -46,21 +46,36 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/luxon": "^3.3.0",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.38.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "prettier": "2.8.7",
     "rimraf": "^4.4.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist"
+    ]
   }
 }
