--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -29,18 +29,20 @@ androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.5.1"
 androidx-test-ext = "androidx.test.ext:junit-ktx:1.1.5"
 androidx-work = "androidx.work:work-runtime-ktx:2.8.1"
 coil = "io.coil-kt:coil:2.5.0"
-junit = "junit:junit:4.13.2"
+junit4 = "junit:junit:4.13.2"
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin" }
 koin-androidx-workmanager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
-kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
+kotlinx-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.1"
 logcat = "com.squareup.logcat:logcat:0.1"
 maps-ktx = { module = "com.google.maps.android:maps-ktx", version.ref = "maps-ktx" }
 maps-utils-ktx = { module = "com.google.maps.android:maps-utils-ktx", version.ref = "maps-ktx" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
+mockk = "io.mockk:mockk:1.13.8"
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okio = "com.squareup.okio:okio:3.5.0"
@@ -52,6 +54,7 @@ room = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+turbine = "app.cash.turbine:turbine:1.0.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -87,4 +90,10 @@ networking = [
     "okhttp-loggingInterceptor",
     "retrofit",
     "retrofit-serialization-converter",
+]
+unitTest = [
+    "junit4",
+    "kotlinx-coroutines-test",
+    "mockk",
+    "turbine",
 ]
