--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Create debug.keystore.jks
+        working-directory: ./frontend
+        env:
+          DEBUG_KEYSTORE_BASE64: ${{ secrets.DEBUG_KEYSTORE_BASE64 }}
+        run: echo $DEBUG_KEYSTORE_BASE64 | base64 -d > "wher-debug.keystore.jks"
+
+      - name: Create release.keystore.jks
+        working-directory: ./frontend
+        env:
+          RELEASE_KEYSTORE_BASE64: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
+        run: echo $RELEASE_KEYSTORE_BASE64 | base64 -d > "wher.keystore.jks"
+
+      - name: Create keystore.properties
+        working-directory: ./frontend
+        env:
+          KEYSTORE_PROPERTIES: ${{ secrets.KEYSTORE_PROPERTIES }}
+        run: echo "$KEYSTORE_PROPERTIES" > ./keystore.properties
+
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
@@ -43,6 +61,10 @@ jobs:
       - name: Build debug
         working-directory: ./frontend
         run: ./gradlew assembleDebug
+
+      - name: Signing report
+        working-directory: ./frontend
+        run: ./gradlew signingReport
 
       - name: Update latest-develop tag
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/frontend' }}
