--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,6 +5,7 @@ build/
 # Local configuration file (sdk path, etc)
 local.properties
 secrets.properties
+keystore.properties
 
 # Log/OS Files
 *.log
