--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@types/config": "^3.3.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
