--- a/index.yml
+++ b/index.yml
@@ -319,16 +319,6 @@ paths:
           schema:
             type: string
           required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                cancel:
-                  type: boolean 
-                  default: false
       responses:
         '201':
           $ref: '#/components/responses/Success'
@@ -378,7 +368,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
-  /friends/:
+  /friends:
     get:
       summary: "#12 As user, I can see my friend list"
       tags:
@@ -426,6 +416,8 @@ paths:
                             type: string
                           photoURL:
                             type: string
+                  total_data:
+                    type: number
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
