--- a/index.yml
+++ b/index.yml
@@ -107,7 +107,7 @@ paths:
       requestBody:
         required: true
         content:
-          multipart/form-data:
+          application/json:
             schema:
               type: object
               properties:
@@ -117,9 +117,6 @@ paths:
                   type: string
                 confirmPassword:
                   type: string
-                file:
-                  type: string
-                  format: binary
       responses:
         '201':
           $ref: '#/components/responses/Success'
@@ -169,8 +166,6 @@ paths:
                     type: string
                   username: 
                     type: string
-                  name: 
-                    type: string
                   email: 
                     type: string
                   isFriend:
@@ -212,7 +207,6 @@ paths:
           name: limit
           schema:
             type: integer
-            default: 10
             minimum: 1
             maximum: 100
           required: false
@@ -244,7 +238,7 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '401':
           $ref: '#/components/responses/Unauthorized'
-  /friends/request:
+  /friends/request/:
     get:
       summary: "#10 As User, I can see my friend request"
       tags:
@@ -264,7 +258,6 @@ paths:
           name: limit
           schema:
             type: integer
-            default: 10
             minimum: 1
             maximum: 100
           required: false
@@ -284,23 +277,14 @@ paths:
                         properties:
                           id: 
                             type: string
-                          status:
+                          userId:
                             type: string
-                          requester: 
-                            type: object
-                            properties:
-                              id: 
-                                type: string
-                              userId:
-                                type: string
-                              username:
-                                type: string
-                              name:
-                                type: string
-                              photoURL:
-                                type: string
-                  total_data:
-                    type: number   
+                          username:
+                            type: string
+                          name:
+                            type: string
+                          photoURL:
+                            type: string
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -319,6 +303,16 @@ paths:
           schema:
             type: string
           required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                cancel:
+                  type: boolean 
+                  default: false
       responses:
         '201':
           $ref: '#/components/responses/Success'
@@ -368,7 +362,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
-  /friends:
+  /friends/:
     get:
       summary: "#12 As user, I can see my friend list"
       tags:
@@ -388,7 +382,6 @@ paths:
           name: limit
           schema:
             type: integer
-            default: 10
             minimum: 1
             maximum: 100
           required: false
@@ -416,8 +409,6 @@ paths:
                             type: string
                           photoURL:
                             type: string
-                  total_data:
-                    type: number
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -443,7 +434,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
-  /locations:
+  /locations/:
     get:
       summary: "#15 As user, I can see maps and my friends location"
       tags:
@@ -463,7 +454,6 @@ paths:
           name: limit
           schema:
             type: integer
-            default: 10
             minimum: 1
             maximum: 100
           required: false
@@ -475,7 +465,7 @@ paths:
             application/json:
               schema:
                 type: object
-                properties: 
+                properties:
                   data:
                     type: array
                     items:
@@ -487,15 +477,10 @@ paths:
                             type: string
                           photoURL:
                             type: string
-                          location: 
-                            type: object
-                            properties:
-                              lat:
-                                type: number
-                              lon:
-                                type: number
-                  total_data:
-                    type: number
+                          lat:
+                            type: number
+                          lon:
+                            type: number
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -510,9 +495,9 @@ paths:
         required: true
         content:
           application/json:
-            schema: 
+            schema:
               type: object
-              properties:   
+              properties:
                 lat:
                   type: number
                 lon:
