add cancel implementation in friend request

--- a/documentation/API-Spec/index.yml
+++ b/documentation/API-Spec/index.yml
@@ -320,6 +320,15 @@ paths:
           schema:
             type: string
           required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                cancel:
+                  type: boolean
       responses:
         '201':
           $ref: '#/components/responses/Success'
