--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.1.3"
+agp = "8.1.4"
 androidx-lifecycle = "2.6.2"
 androidx-navigation = "2.7.5"
 koin = "3.5.0"
@@ -55,6 +55,7 @@ room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 turbine = "app.cash.turbine:turbine:1.0.0"
+imagepicker = "com.github.dhaval2404:imagepicker:2.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -65,7 +66,7 @@ kotlin-serialization = "org.jetbrains.kotlin.plugin.serialization:1.9.20"
 kotlinter = "org.jmailen.kotlinter:4.1.0"
 ksp = "com.google.devtools.ksp:1.9.10-1.0.13"
 vc-update = "nl.littlerobots.version-catalog-update:0.8.1"
-versions = "com.github.ben-manes.versions:0.49.0"
+versions = "com.github.ben-manes.versions:0.50.0"
 
 [bundles]
 androidx-lifecycle = [
