--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.1.3"
+agp = "8.1.4"
 androidx-lifecycle = "2.6.2"
 androidx-navigation = "2.7.5"
 koin = "3.5.0"
@@ -11,7 +11,7 @@ mockk = "1.13.7"
 okhttp = "4.12.0"
 org-jetbrains-kotlin-android = "1.8.0"
 play-services-auth = "20.7.0"
-room = "2.5.2"
+room = "2.5.0"
 
 [libraries]
 android-desugarJdkLibs = "com.android.tools:desugar_jdk_libs:2.0.4"
@@ -29,6 +29,7 @@ androidx-test-espresso-core = "androidx.test.espresso:espresso-core:3.5.1"
 androidx-test-ext = "androidx.test.ext:junit-ktx:1.1.5"
 androidx-work = "androidx.work:work-runtime-ktx:2.8.1"
 coil = "io.coil-kt:coil:2.5.0"
+imagepicker = "com.github.dhaval2404:imagepicker:2.1"
 junit4 = "junit:junit:4.13.2"
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-navigation = { module = "io.insert-koin:koin-androidx-navigation", version.ref = "koin" }
@@ -45,7 +46,7 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 mockk = "io.mockk:mockk:1.13.8"
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-okio = "com.squareup.okio:okio:3.5.0"
+okio = "com.squareup.okio:okio:3.6.0"
 play-services-location = "com.google.android.gms:play-services-location:21.0.1"
 play-services-maps = "com.google.android.gms:play-services-maps:18.2.0"
 retrofit = "com.squareup.retrofit2:retrofit:2.9.0"
@@ -65,7 +66,7 @@ kotlin-serialization = "org.jetbrains.kotlin.plugin.serialization:1.9.20"
 kotlinter = "org.jmailen.kotlinter:4.1.0"
 ksp = "com.google.devtools.ksp:1.9.10-1.0.13"
 vc-update = "nl.littlerobots.version-catalog-update:0.8.1"
-versions = "com.github.ben-manes.versions:0.49.0"
+versions = "com.github.ben-manes.versions:0.50.0"
 
 [bundles]
 androidx-lifecycle = [
